feat: Implementar sistema completo de QA, testing y automatización con CI/CD
- 🚀 Sistema robusto de QA, testing y releases implementado
- 🔧 Scripts de automatización (secrets, coverage badges, QA reports, releases)
- 🏗️ GitHub Actions CI/CD workflow con cobertura y notificaciones Slack
- 🧪 Tests unitarios, integración y E2E completos con mocks
- 📚 Documentación extensa (guías de GitHub automation, QA/testing)
- 🎯 ADRs para arquitectura de integraciones y políticas de testing
- ⚙️ VSCode configurado con extensiones recomendadas
- 🔐 Sistema automatizado de configuración de secrets
- 📊 Generación automática de badges de cobertura
- 📢 Reportes de QA y notificaciones automatizadas a Slack

Scripts implementados:
- setup-secrets.sh: Configuración automática de GitHub secrets
- generate-coverage-badge.sh: Generación de badges de cobertura
- qaReport.js: Reportes de calidad automatizados
- slackTestReport.js: Notificaciones de tests a Slack
- releaseManager.js: Gestión automatizada de releases
- githubSlackNotifier.js: Notificaciones GitHub-Slack

Estructura completa:
- .github/workflows/: CI/CD automatizado
- scripts/: Automatización de QA y releases
- src/__tests__/: Test suites completas
- docs/: Documentación técnica y guías
- .vscode/: Configuración optimizada para desarrollo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,11 @@
     "noEmit": false,
     "declaration": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "types": [
+      "jest",
+      "node"
+    ]
   },
   "include": [
     "src/**/*"
