🔧 fix: Resolve CI coverage comment permissions error
✅ ISSUE FIXED:
- romeovs/lcov-reporter-action@v0.3.1 was failing with 403 'Resource not accessible by integration'
- Action tried to access PR comments without proper permissions

✅ SOLUTION IMPLEMENTED:
1. Added explicit permissions to workflow:
   - contents: read
   - pull-requests: write
   - issues: write

2. Replaced problematic action with modern alternative:
   - FROM: romeovs/lcov-reporter-action@v0.3.1 (deprecated/problematic)
   - TO: MishaKav/jest-coverage-comment@main (active/reliable)

✅ CONFIGURATION:
- Uses coverage-summary.json (already configured in jest.config.js)
- Better PR comment formatting and functionality
- No more 403 permission errors

✅ CI STATUS:
- Node 18.x: Already passing ✅
- Node 20.x: Should now pass ✅ (was failing on coverage comment)
- All other jobs: Already working ✅

FIXES: GitHub Actions permission error on coverage comment step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,12 @@ on:
     branches: [main, develop]
   workflow_dispatch:
 
+# Permisos explícitos para el workflow
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+
 env:
   NODE_VERSION: '20.x'
 
@@ -60,11 +66,11 @@ jobs:
 
       - name: 📈 Coverage Comment (PR only)
         if: github.event_name == 'pull_request' && matrix.node-version == '20.x'
-        uses: romeovs/lcov-reporter-action@v0.3.1
+        uses: MishaKav/jest-coverage-comment@main
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          lcov-file: ./coverage/lcov.info
-          delete-old-comments: true
+          coverage-summary-path: ./coverage/coverage-summary.json
+          title: 'Jest Coverage Report'
+          summary-title: 'Coverage Summary'
 
       - name: 📱 Report test results to Slack
         if: always() && matrix.node-version == '20.x'
