--- a/package.json
+++ b/package.json
@@ -61,14 +61,16 @@
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
     "eslint": "^8.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.0.0",
+    "lint-staged": "^16.1.2",
     "prettier": "^3.0.0",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
     "ts-node-dev": "^2.0.0",
     "typedoc": "^0.25.0",
     "typescript": "^5.0.0",
-    "vercel": "^41.0.2"
+    "vercel": "^25.2.0"
   },
   "dependencies": {
     "@hubspot/api-client": "^12.0.0",
@@ -86,5 +88,19 @@
     "tar": "^6.2.1",
     "semver": "^7.6.0",
     "debug": "^4.4.0"
+  },
+  "lint-staged": {
+    "*.{ts,js}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,yaml,yml,md}": [
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
