feat: Implement complete Google Sheets Lead Scoring Zapier Integration
🚀 MAJOR FEATURE: Google Sheets ↔ HubSpot ↔ Slack Integration

## ✅ New Components Implemented

### 1. Zapier CLI Integration Architecture
- Complete TypeScript-based Zapier CLI app structure
- Modular trigger and action system
- Robust error handling with retries and logging
- Comprehensive type definitions

### 2. Google Sheets Trigger
- File: src/zapier/triggers/newGoogleSheetsLeadScoring.ts
- Detects new rows in 'Lead Scoring' sheet every 15 minutes
- Filters by timestamp to capture only recent entries
- Extracts: email, external_score, name, company, source

### 3. HubSpot External Score Action
- File: src/zapier/creates/updateHubSpotExternalScore.ts
- Searches HubSpot contact by email
- Updates external_score property
- Handles contact not found scenarios
- Full API error handling with retries

### 4. Slack High Score Alert Action
- File: src/zapier/creates/sendHighScoreSlackAlert.ts
- Sends rich Block Kit messages to #scoring-leads
- Only triggers when external_score > 50
- Includes contact details and HubSpot link button
- Custom message formatting with emoji and styling

## 🔧 Core Infrastructure

### Zapier App Configuration
- Updated src/zapier/index.ts with new triggers/actions
- Added Google Sheets credentials to auth config
- Enhanced middleware for API headers and error handling
- Proper routing and registration of all components

### Type System Enhancement
- Extended ZapierBundle types for Google Sheets auth
- Comprehensive TypeScript interfaces for all APIs
- Strict typing for better development experience
- Enhanced error type definitions

### Utility Functions
- withRetry(): Exponential backoff for network failures
- logZapAction(): Structured logging for all operations
- Common error handling patterns
- Reusable API request helpers

## 🧪 Testing Infrastructure

### Integration Tests
- File: tests/googleSheetsLeadScoring.integration.test.ts
- Comprehensive end-to-end flow testin

--- a/package.json
+++ b/package.json
@@ -39,7 +39,14 @@
     "clean:extensions": "node scripts/cleanExtensions.js",
     "setup:env": "cp .env.example .env",
     "docs:generate": "typedoc src --out docs/api",
-    "clean": "rm -rf dist node_modules package-lock.json"
+    "clean": "rm -rf dist node_modules package-lock.json",
+    "zapier:validate": "zapier validate",
+    "zapier:test": "zapier test",
+    "zapier:push": "zapier push",
+    "zapier:promote": "zapier promote",
+    "zapier:deploy": "./scripts/deploy-zapier.sh",
+    "zapier:build": "npm run build && zapier validate",
+    "zapier:logs": "zapier logs"
   },
   "keywords": [
     "slack",
@@ -70,7 +77,8 @@
     "ts-node-dev": "^2.0.0",
     "typedoc": "^0.25.0",
     "typescript": "^5.0.0",
-    "vercel": "^25.2.0"
+    "vercel": "^25.2.0",
+    "zapier-platform-cli": "^17.2.0"
   },
   "dependencies": {
     "@hubspot/api-client": "^12.0.0",
