--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,13 @@ FIREBASE_CONFIG={"apiKey":"your-api-key","authDomain":"your-domain.firebaseapp.c
 ZAPIER_WEBHOOK_URL=https://hooks.zapier.com/hooks/catch/your-webhook-url
 ZAPIER_API_KEY=your-zapier-api-key-here
 
+# Google Sheets Configuration (for Zapier CLI integration)
+GOOGLE_ACCESS_TOKEN=your-google-oauth2-access-token
+GOOGLE_SPREADSHEET_ID=your-google-spreadsheet-id-with-lead-scoring-sheet
+GOOGLE_CLIENT_ID=your-google-oauth-client-id
+GOOGLE_CLIENT_SECRET=your-google-oauth-client-secret
+GOOGLE_REFRESH_TOKEN=your-google-oauth-refresh-token
+
 # Vercel Configuration
 VERCEL_TOKEN=your-vercel-token-here
 VERCEL_PROJECT_ID=your-vercel-project-id
@@ -38,6 +45,13 @@ REDIS_URL=your-redis-connection-string
 # API Keys for external services
 OPENAI_API_KEY=your-openai-api-key-here
 GOOGLE_API_KEY=your-google-api-key-here
+
+# Google Sheets Configuration (for Lead Scoring Integration)
+GOOGLE_ACCESS_TOKEN=your-google-oauth2-access-token
+GOOGLE_SPREADSHEET_ID=your-google-spreadsheet-id-with-lead-scoring-sheet
+GOOGLE_CLIENT_ID=your-google-oauth-client-id
+GOOGLE_CLIENT_SECRET=your-google-oauth-client-secret
+GOOGLE_REFRESH_TOKEN=your-google-oauth-refresh-token
 
 # Security
 JWT_SECRET=your-jwt-secret-here
