feat: ultra-optimize GitHub Actions for cost reduction
🎯 CRITICAL: Reduce GitHub Actions consumption by ~80%

WORKFLOWS OPTIMIZED:
- CI: 15min → 4min max, only main branch
- Deploy: 10min → 6min max, only version tags
- Disabled: Original CI workflow (ci.yml.disabled)
- Added: Emergency workflow (3min max, manual only)

LOCAL DEVELOPMENT PRIORITIZED:
- validate:local script for complete local validation
- test:fast for rapid development cycles
- qa:minimal for pre-commit checks
- Updated package.json with cost-optimized scripts

COST REDUCTION FEATURES:
- Aggressive timeouts prevent hung workflows
- Single job execution (no matrix builds)
- Minimal test runs with --bail flag
- No coverage reporting (saves time)
- No Slack notifications (saves API calls)
- Branch restrictions (main only)

STRATEGY:
- Prioritize local development over CI runs
- Only push when features are complete
- Emergency workflows for critical situations only
- ~80% reduction in monthly GitHub Actions minutes

Ready for cost-efficient development until Kopp agreement.

--- a/package.json
+++ b/package.json
@@ -46,7 +46,11 @@
     "zapier:promote": "zapier promote",
     "zapier:deploy": "./scripts/deploy-zapier.sh",
     "zapier:build": "npm run build && zapier validate",
-    "zapier:logs": "zapier logs"
+    "zapier:logs": "zapier logs",
+    "validate:local": "./scripts/local-validation.sh",
+    "test:fast": "jest --bail --testTimeout=5000 --silent",
+    "qa:minimal": "npm run lint:check --silent && npm run test:fast && npm run build --silent",
+    "pre-commit": "npm run validate:local"
   },
   "keywords": [
     "slack",
