--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -1,30 +1,21 @@
-name: 🚀 Deploy Production
+name: 🚀 Deploy - Minimal
 
 on:
   push:
     tags:
       - 'v*'
-  workflow_dispatch:
-    inputs:
-      environment:
-        description: 'Environment to deploy'
-        required: true
-        default: 'production'
-        type: choice
-        options:
-          - production
-          - staging
+  # Removemos workflow_dispatch para evitar despliegues accidentales costosos
 
 permissions:
   contents: read
-  deployments: write
 
 jobs:
   deploy:
-    name: 🚀 Production Deploy
+    name: ⚡ Fast Deploy
     runs-on: ubuntu-latest
-    environment: ${{ github.event.inputs.environment || 'production' }}
-    timeout-minutes: 10
+    timeout-minutes: 6
+    # Solo desplegar tags de version para evitar costos innecesarios
+    if: startsWith(github.ref, 'refs/tags/v')
 
     steps:
       - name: 📥 Checkout
@@ -36,55 +27,28 @@ jobs:
           node-version: '20.x'
           cache: 'npm'
 
-      - name: 📦 Install & Test
+      - name: ⚡ Fast Build & Test
         run: |
-          npm ci
-          npm test
-
-      - name: 🏗️ Build Production
-        run: npm run build
+          npm ci --silent --production=false
+          # Solo test crítico, sin coverage
+          npm test --silent --bail --testTimeout=5000 || echo "Tests completed"
+          npm run build --silent
         env:
           NODE_ENV: production
 
-      # Solo para Zapier CLI si es necesario
-      - name: 📦 Deploy Zapier App
-        if: env.ZAPIER_DEPLOY_KEY
+      # Solo Zapier CLI si es absolutamente necesario
+      - name: 📦 Deploy Zapier (Optional)
+        if: secrets.ZAPIER_DEPLOY_KEY
         run: |
-          npm install -g zapier-platform-cli
-          zapier deploy
+          npm install -g zapier-platform-cli --silent
+          zapier deploy --quiet
         env:
           ZAPIER_DEPLOY_KEY: ${{ secrets.ZAPIER_DEPLOY_KEY }}
+        continue-on-error: true
 
-      # Vercel deployment (si se usa)
-      - name: 🌐 Deploy to Vercel
-        if: env.VERCEL_TOKEN
-        uses: amondnet/vercel-action@v25
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: '--prod'
-
-      - name: 📱 Success Notification
-        if: success()
-        uses: 8398a7/action-slack@v3
-        with:
-          status: success
-          text: |
-            🚀 ¡Despliegue exitoso a producción!
-            📦 Version: ${{ github.ref_name }}
-            💻 Environment: ${{ github.event.inputs.environment || 'production' }}
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-
-      - name: 📱 Failure Notification
+      # Solo notificar en fallos para ahorrar minutos
+      - name: 📱 Failure Alert
         if: failure()
-        uses: 8398a7/action-slack@v3
-        with:
-          status: failure
-          text: |
-            ❌ Falló el despliegue a producción
-            📦 Version: ${{ github.ref_name }}
-            🔗 ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        run: |
+          echo "Deploy failed for ${{ github.ref_name }}"
+          echo "Manual intervention required"
