feat: complete integration setup scripts for all platforms
🔗 INTEGRATIONS SETUP COMPLETE:

AUTOMATED SCRIPTS:
- setup-integrations.sh: Master setup script
- setup-slack.sh: Complete Slack configuration
- setup-zapier.sh: Zapier CLI and app setup
- setup-hubspot.sh: HubSpot API and properties
- setup-notion.sh: Notion templates and docs

FEATURES:
- Auto-create Slack channels (#automations-alerts, #scoring-leads)
- Zapier app validation and deployment prep
- HubSpot custom properties verification
- Notion documentation templates
- Complete error handling and validation

PACKAGE.JSON SCRIPTS:
- npm run setup:all - Complete integration setup
- npm run setup:slack - Slack configuration
- npm run setup:zapier - Zapier CLI setup
- npm run setup:hubspot - HubSpot integration
- npm run setup:notion - Notion templates

DOCUMENTATION:
- docs/INTEGRATIONS_COMPLETE_GUIDE.md - Complete setup guide
- docs/notion_templates/ - Ready-to-use Notion templates
- config/ integration configs saved automatically

COST-OPTIMIZED:
- Local validation prioritized
- Minimal API calls during setup
- Smart dependency checking
- Error prevention and recovery

Ready for one-command integration setup! 🚀

--- a/package.json
+++ b/package.json
@@ -50,7 +50,13 @@
     "validate:local": "./scripts/local-validation.sh",
     "test:fast": "jest --bail --testTimeout=5000 --silent",
     "qa:minimal": "npm run lint:check --silent && npm run test:fast && npm run build --silent",
-    "pre-commit": "npm run validate:local"
+    "pre-commit": "npm run validate:local",
+    "setup:integrations": "./scripts/setup-integrations.sh",
+    "setup:slack": "./scripts/setup-slack.sh",
+    "setup:zapier": "./scripts/setup-zapier.sh",
+    "setup:hubspot": "./scripts/setup-hubspot.sh",
+    "setup:notion": "./scripts/setup-notion.sh",
+    "setup:all": "npm run setup:integrations"
   },
   "keywords": [
     "slack",
