--- a/config/development.yml
+++ b/config/development.yml
@@ -1,7 +1,7 @@
 # Kopp CRM Automation - Development Configuration
 
 app:
-  name: "Kopp CRM Automation"
+  name: 'Kopp CRM Automation'
   environment: development
   debug: true
   port: 3000
@@ -10,37 +10,37 @@ logging:
   level: debug
   console: true
   file: true
-  path: "./logs/development.log"
+  path: './logs/development.log'
 
 database:
   firebase:
     useEmulator: true
-    emulatorHost: "localhost"
+    emulatorHost: 'localhost'
     emulatorPort: 9000
 
 integrations:
   slack:
     testMode: true
-    webhookUrl: "${SLACK_WEBHOOK_URL}"
+    webhookUrl: '${SLACK_WEBHOOK_URL}'
     rateLimitPerMinute: 30
-  
+
   hubspot:
     testMode: true
     sandbox: true
-    apiKey: "${HUBSPOT_API_KEY}"
-    
+    apiKey: '${HUBSPOT_API_KEY}'
+
   zapier:
-    enabled: false  # Disabled in development
+    enabled: false # Disabled in development
     testWebhooks: true
 
 security:
   cors:
-    origin: "*"
+    origin: '*'
     credentials: true
-  
+
   rateLimit:
-    windowMs: 900000  # 15 minutes
-    max: 100  # limit each IP to 100 requests per windowMs
+    windowMs: 900000 # 15 minutes
+    max: 100 # limit each IP to 100 requests per windowMs
 
 features:
   hotReload: true
