--- a/config/production.yml
+++ b/config/production.yml
@@ -1,7 +1,7 @@
 # Kopp CRM Automation - Production Configuration
 
 app:
-  name: "Kopp CRM Automation"
+  name: 'Kopp CRM Automation'
   environment: production
   debug: false
   port: ${PORT}
@@ -10,7 +10,7 @@ logging:
   level: info
   console: false
   file: true
-  path: "./logs/production.log"
+  path: './logs/production.log'
   rotation: daily
   maxSize: 50MB
   maxFiles: 30
@@ -18,49 +18,49 @@ logging:
 database:
   firebase:
     useEmulator: false
-    projectId: "${FIREBASE_PROJECT_ID}"
-    credentials: "${FIREBASE_PRIVATE_KEY}"
+    projectId: '${FIREBASE_PROJECT_ID}'
+    credentials: '${FIREBASE_PRIVATE_KEY}'
 
 integrations:
   slack:
     testMode: false
-    webhookUrl: "${SLACK_WEBHOOK_URL}"
+    webhookUrl: '${SLACK_WEBHOOK_URL}'
     rateLimitPerMinute: 50
     retryOnFailure: true
     maxRetries: 3
-  
+
   hubspot:
     testMode: false
     sandbox: false
-    apiKey: "${HUBSPOT_API_KEY}"
+    apiKey: '${HUBSPOT_API_KEY}'
     batchProcessing: true
     batchSize: 100
-    
+
   zapier:
     enabled: true
     migrationPhase: true
-    webhookUrl: "${ZAPIER_WEBHOOK_URL}"
+    webhookUrl: '${ZAPIER_WEBHOOK_URL}'
     timeout: 30000
 
 security:
   cors:
-    origin: ["https://kopp-stadium.com", "https://app.kopp-stadium.com"]
+    origin: ['https://kopp-stadium.com', 'https://app.kopp-stadium.com']
     credentials: true
-  
+
   rateLimit:
-    windowMs: 900000  # 15 minutes
-    max: 1000  # limit each IP to 1000 requests per windowMs
-  
+    windowMs: 900000 # 15 minutes
+    max: 1000 # limit each IP to 1000 requests per windowMs
+
   jwt:
-    secret: "${JWT_SECRET}"
-    expiresIn: "24h"
+    secret: '${JWT_SECRET}'
+    expiresIn: '24h'
 
 monitoring:
   enabled: true
   errorReporting: true
   performanceMetrics: true
   healthCheck:
-    endpoint: "/health"
+    endpoint: '/health'
     interval: 60000
 
 features:
