--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "clean:extensions": "node scripts/cleanExtensions.js",
     "setup:env": "cp .env.example .env",
     "docs:generate": "typedoc src --out docs/api",
+    "docs:swagger": "node test-swagger.js",
+    "docs:open": "node scripts/open-swagger.js",
+    "docs:validate": "npm run build && npm run docs:swagger",
     "clean": "rm -rf dist node_modules package-lock.json",
     "zapier:validate": "zapier validate",
     "zapier:test": "zapier test",
@@ -56,7 +59,15 @@
     "setup:zapier": "./scripts/setup-zapier.sh",
     "setup:hubspot": "./scripts/setup-hubspot.sh",
     "setup:notion": "./scripts/setup-notion.sh",
-    "setup:all": "npm run setup:integrations"
+    "setup:all": "npm run setup:integrations",
+    "setup:vscode": "./scripts/setup-vscode-extensions.sh",
+    "setup:phase1": "./scripts/setup-phase1-complete.sh",
+    "clean:env": "./scripts/setup-clean-environment.sh",
+    "clean:lockfile": "rm -f package-lock.json yarn.lock && npm install",
+    "lint:md": "markdownlint '**/*.md' --ignore node_modules",
+    "lint:md:fix": "markdownlint '**/*.md' --ignore node_modules --fix",
+    "format:all": "prettier --write '**/*.{ts,js,json,yaml,yml,md}' --ignore-path .gitignore",
+    "prepare": "husky install"
   },
   "keywords": [
     "slack",
@@ -71,6 +82,7 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/eslint-parser": "^7.0.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.0.0",
@@ -81,6 +93,8 @@
     "husky": "^9.1.7",
     "jest": "^29.0.0",
     "lint-staged": "^16.1.2",
+    "markdownlint-cli": "^0.45.0",
+    "pre-commit": "^1.2.2",
     "prettier": "^3.0.0",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
@@ -94,10 +108,16 @@
     "@hubspot/api-client": "^12.0.0",
     "@slack/bolt": "^4.4.0",
     "@slack/web-api": "^7.9.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "firebase-admin": "^12.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "yaml": "^2.8.0",
     "zapier-platform-core": "^17.1.0"
   },
   "overrides": {
@@ -112,13 +132,15 @@
       "eslint --fix",
       "prettier --write"
     ],
-    "*.{json,yaml,yml,md}": [
+    "*.{json,yaml,yml}": [
       "prettier --write"
+    ],
+    "*.md": [
+      "markdownlint --fix",
+      "prettier --write"
+    ],
+    "*.{sh,bash}": [
+      "chmod +x"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   }
 }
